<resources>
   <string name="yes">Yes</string>
   <string name="no">No</string>
   <string name="ok">Ok</string>
   <string name="cancel">Cancel</string>
   <string name="sdefault">4</string>
    <string name="current_uvi_title">Current UVI</string>
    <string name="current_uvi_description">UVI Scale</string>
	<string name="user_profile">User Profile</string>
	<string name="user_profile_gender">Gender</string>
	<string name="user_profile_update">Update user profile?</string>
    <string name="collect_accelerometer">Collect Accelerometer</string>
    <string name="collect_light">Collect Light</string>
    <string name="ui_collector_radio_shade_title">Shade</string>
    <string name="ui_collector_radio_sun_title">Sun</string>
    <string name="ui_collector_radio_standing_title">Standing</string>
    <string name="ui_collector_radio_cloud_title">Cloud</string>
    <string name="ui_collector_radio_walking_title">Walking</string>
    <string name="ui_collector_radio_running_title">Running</string>
    <string name="ui_collector_radio_other_title">Others</string>
    <string name="ui_collector_button_start_title">Start</string>
    <string name="ui_collector_button_stop_title">Stop</string>
    <string name="ui_collector_button_delete_title">Delete</string>
    <string name="ui_collector_toast_file_deleted">All files deleted.</string>
    <string name="ui_sensor_service_notification_ticker">Collector started recording.</string>
    <string name="ui_sensor_service_notification_title">MyRuns Collector</string>
    <string name="ui_sensor_service_notification_content">Recording your activity data now</string>
    <string name="ui_sensor_service_toast_success_file_updated">Data file updated.</string>
    <string name="ui_sensor_service_toast_success_file_created">Data file created.</string>
    <string name="ui_sensor_service_toast_error_file_saving_failed">Failed saving the file. Check your storage.</string>
    <string name="app_name">MyRuns</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="StartFragment_InputType">Input type</string>
    <string name="StartFragment_ActivityType">Activity Type</string>
    <string name="recommend_low">A UV Index reading of 0 to 2 means low danger from the sun\'s UV rays for the average person.\n\nRecommendations:\n-Wear sunglasses on bright days.\n-If you burn easily, cover up and use broad spectrum SPF 30+ sunscreen.\n-Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="recommend_moderate">A UV Index reading of 3 to 5 means moderate risk of harm from unprotected sun exposure.\n\nRecommendations:\n-Stay in shade near midday when the sun is strongest.\n-If outdoors, wear protective clothing, a wide-brimmed hat, and UV-blocking sunglasses.\n-Generously apply broad spectrum SPF 30+ sunscreen every 2 hours, even on cloudy days, and after swimming or sweating.\n-Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="recommend_high">A UV Index reading of 6 to 7 means high risk of harm from unprotected sun exposure. Protection against skin and eye damage is needed.\n\nRecommendations:\n-Reduce time in the sun between 10 a.m. and 4 p.m.\n-If outdoors, seek shade and wear protective clothing, a wide-brimmed hat, and UV-blocking sunglasses.\n-Generously apply broad spectrum SPF 30+ sunscreen every 2 hours, even on cloudy days, and after swimming or sweating. \n-Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="recommend_veryhigh">A UV Index reading of 8 to 10 means very high risk of harm from unprotected sun exposure. Take extra precautions because unprotected skin and eyes will be damaged and can burn quickly.\n\nRecommendations:\n-Minimize sun exposure between 10 a.m. and 4 p.m.\n-If outdoors, seek shade and wear protective clothing, a wide-brimmed hat, and UV-blocking sunglasses.\n-Generously apply broad spectrum SPF 30+ sunscreen every 2 hours, even on cloudy days, and after swimming or sweating. \n-Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="recommend_extreme">A UV Index reading of 11 or more means extreme risk of harm from unprotected sun exposure. Take all precautions because unprotected skin and eyes can burn in minutes.\n\nRecommendations:\n-Try to avoid sun exposure between 10 a.m. and 4 p.m.\n-If outdoors, seek shade and wear protective clothing, a wide-brimmed hat, and UV-blocking sunglasses.\n-Generously apply broad spectrum SPF 30+ sunscreen every 2 hours, even on cloudy days, and after swimming or sweating.\n-Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="loadSensor">Load Sensor</string>
    <string name="instantSample">Instant Sample</string>
    <string name="startStreaming">Start Streaming</string>
    <string name="stopStreaming">Stop Streaming</string>
    <string-array name="InputTypeEntries">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="ActivityTypeEntries">
        <item>Running</item>
        <item>Cycling</item>
        <item>Walking</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <string name="button_start">Start</string>
    <string-array name="input_items">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heartrate</item>
        <item>Comment</item>
    </string-array>
    <string name="title_button_save">Save</string>
    <string name="title_button_cancel">Cancel</string>
    <string name="title_button_send">Send</string>
    <string name="title_dialog_date">To Be Modified.</string>
    <string name="title_dialog_time">Set Time</string>
    <string name="title_dialog_duration">Duration (Minitues)</string>
    <string name="title_dialog_distance">Distance (Miles)</string>
    <string name="title_dialog_calories">Calories</string>
    <string name="title_dialog_heart_rate">Averate Heart Rate (BPM)</string>
    <string name="title_dialog_comment">Comment</string>
 	<string name="title_button_alert_ok">OK</string>
 	<string name="title_button_alert_cancel">Cancel</string>
	<string name="dialog_comment_hint">How was the exercise? Speak your mind here:)</string>
    <string name="string_miles">Miles</string>
    <string name="title_display_activity_type">Activity type</string>
    <string name="title_display_date_time">Date and time</string>
    <string name="title_display_duration">Duration (Minutes)</string>
    <string name="title_display_distance">Distance (Miles)</string>
    <string name="title_display_calorie">Calories</string>
    <string name="title_display_heart_rate">Heartrate (BPM)</string>
    <string name="title_display_comment">Comment</string>
    <string-array name="unit_display_value">
        <item>@string/kilometers</item>
        <item>@string/miles</item>
    </string-array>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="feet">Feet</string>
    <string name="mile_per_hr">m/h</string>
    <string name="preference_key_unit_display">ui_settings_unit_display</string>
    <string name="startTab_title">START</string>
    <string name="historyTab_title">HISTORY</string>
    <string name="settingsTab_title">SETTINGS</string>
    <string name="uviTab_title">UVI</string>
    <string name="chartTab_title">CHART</string>
    <string name="graphTab_title">RELATIVE</string>
    <string name="StartFragment_prompt">impatient, huh?</string>
    <string name="HistoryFragment_prompt">brand new era!</string>
    <string name="SettingsFragment_prompt">that\'s the right place!</string>
    <string name="account_preference_title">ACCOUNT PREFERENCE</string>
    <string name="additional_settings_title">ADDITIONAL SETTINGS</string>
    <string name="misc_title">MISC.</string>
    <string name="privacy_setting_title">Privacy setting</string>
    <string name="privacy_setting_summary">Posting your records anonymously</string>
    <string name="unit_preference_summary">Select the units in which you would like to see distance values</string>
    <string name="unit_preference_title">Unit Preference</string>
    <string name="unit_preference_dialogTitle">Unit Preference</string>
    <string-array name="unit_preference_entries">
        <item>Metric (meters)</item>
        <item>Imperial (feet)</item>
    </string-array>
    <string-array name="unit_preference_entryValues">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="comment_title">Comment</string>
    <string name="comment_summary">Any suggestion to this course?</string>
    <string name="comment_dialogTitle">Comment</string>
    <string name="class_homepage_title">Class homepage</string>
    <string name="class_homepage_summary">http://www.cs.dartmouth.edu/~campbell</string>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_summary">Names, Email, Class, etc</string>
    <string name="avatar_description">Profile photo</string>
    <string name="photo_profile_title">Profile photo</string>
    <string name="button_change">Change</string>
    <string name="camara_photo_picker_dialog">Take from camera</string>
    <string name="gallery_photo_picker_dialog">Select from gallery</string>
    <string name="photo_picker_tag">photo picker tag</string>
    <string name="photo_picker_title">Select profile image</string>
    <string-array name="photo_picker_items">
        <item>Take picture from camera</item>
        <item>Select from gallery</item>
    </string-array>
    <string name="photo_filename">avatar.png</string>
    <string name="title_birthday">Birthday</string>
    <string name="hint_birthday">Select your Birthday!</string>
    <string name="select_birthday">Select</string>
    <string name="test">test string</string>
    <string name="title_Name">Name</string>
    <string name="hint_Name">Your name here</string>
    <string name="title_Email">Email</string>
    <string name="hint_Email">Your email here</string>
    <string name="title_Gender">Gender</string>
    <string name="title_Class">Class</string>
    <string name="title_Major">Major</string>
    <string name="RadioButtonGenderFemale">Female</string>
    <string name="RadioButtonGenderMale">Male</string>
    <string name="title_Phone">Phone</string>
    <string name="hint_Phone">Your phone number here</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="msg_cancel">I\'ll miss you</string>
    <string name="msg_save">profile saved:) see you</string>
    <string name="msg_later">later</string>
    <string name="data_Name">name</string>
    <string name="data_Phone">phone</string>
    <string name="data_Email">email</string>
    <string name="data_GenderF">female</string>
    <string name="data_GenderM">mail</string>
    <string name="data_Class">class</string>
    <string name="data_Major">major</string>
</resources>