<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/loadSensor_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loadSensor"
        />
        <Button
            android:id="@+id/toggleStream_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/instantSample_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/instantSample"
        />
    </LinearLayout>
    <ScrollView
        android:id="@+id/console_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mode_layout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
          	<TextView
		        android:id="@+id/uvSensor0_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="UV0 : 0"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:paddingBottom="10dp"
	        />
		    <TextView 
		        android:id="@+id/lightSensor0_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="LUX0 : 0"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:paddingBottom="10dp"
		    />
		    <TextView
		        android:id="@+id/uvSensor1_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="UV1 : 0"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:paddingBottom="10dp"
	        />
		    <TextView 
		        android:id="@+id/lightSensor1_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="LUX1 : 0"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:paddingBottom="10dp"
		    />
		   
    <RadioGroup
        android:id="@+id/radioGroupLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp" >

        <RadioButton
            android:id="@+id/radioShade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:text="@string/ui_collector_radio_shade_title" />

        <RadioButton
            android:id="@+id/radioSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ui_collector_radio_sun_title" />
        <RadioButton
            android:id="@+id/radioCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ui_collector_radio_cloud_title" />
        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ui_collector_radio_other_title" />
    </RadioGroup>     
		   <Button
            android:id="@+id/sampleUVBtn"
            android:text="Sample UV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="uploadSample()"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>